--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -41,8 +41,7 @@
   font-weight: 400;
 }
 
-#divider {
-  height: 2px;
+#bottom-container {
   width: 100%;
-  background-color: grey;
+  background-color: white;
 }
